# server/internal/handler/article.go
@@ -7,6 +7,7 @@ import (
 	"server/internal/entities"
 	"server/internal/log"
 	"server/internal/repository/postgres"
+	"strconv"
 )
 
 // CreateArticle
@@ -106,4 +107,251 @@ func (h *Handler) CreateArticle(c *fiber.Ctx) error {
 		Url: c.OriginalURL(), Status: fiber.StatusOK})
 	logEvent.Msg("success")
 	return c.Status(fiber.StatusOK).JSON(articleDB)
+}
+
+// GetAllArticles
+// @Tags article
+// @Summary      Get all articles
+// @Accept       json
+// @Produce      json
+// @Success 200 {object} []entities.Article
+// @Failure 400 {object} entities.ErrorResponse
+// @Failure 401 {object} entities.ErrorResponse
+// @Failure 500 {object} entities.ErrorResponse
+// @Router       /article [get]
+func (h *Handler) GetAllArticles(c *fiber.Ctx) error {
+	h.logger.Debug().Msg("call postgres.DBArticleGetAll")
+	articles, err := postgres.DBArticleGetAll(h.db)
+	if err != nil {
+		logEvent := log.CreateLog(h.logger, log.LogsField{Level: "Error", Method: c.Method(),
+			Url: c.OriginalURL(), Status: fiber.StatusInternalServerError})
+		logEvent.Msg(err.Error())
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{"error": err.Error()})
+	}
+
+	logEvent := log.CreateLog(h.logger, log.LogsField{Level: "Info", Method: c.Method(),
+		Url: c.OriginalURL(), Status: fiber.StatusOK})
+	logEvent.Msg("success")
+	return c.Status(fiber.StatusOK).JSON(articles)
+}
+
+// GetArticleFile
+// @Tags article
+// @Summary      Get articles file
+// @Accept       json
+// @Produce      octet-stream
+// @Param        id   path      int  true  "Article ID"
+// @Success 200 {file} file
+// @Failure 400 {object} entities.ErrorResponse
+// @Failure 401 {object} entities.ErrorResponse
+// @Failure 500 {object} entities.ErrorResponse
+// @Router       /article/file/{id} [get]
+func (h *Handler) GetArticleFile(c *fiber.Ctx) error {
+	idStr := c.Params("id")
+	id, err := strconv.Atoi(idStr)
+	if err != nil {
+		logEvent := log.CreateLog(h.logger, log.LogsField{Level: "Error", Method: c.Method(),
+			Url: c.OriginalURL(), Status: fiber.StatusInternalServerError})
+		logEvent.Msg(err.Error())
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{"error": err.Error()})
+	}
+
+	h.logger.Debug().Msg("call postgres.DBArticleGetAll")
+	path, err := postgres.DBArticleGetPath(h.db, id)
+	if err != nil {
+		logEvent := log.CreateLog(h.logger, log.LogsField{Level: "Error", Method: c.Method(),
+			Url: c.OriginalURL(), Status: fiber.StatusInternalServerError})
+		logEvent.Msg(err.Error())
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{"error": err.Error()})
+	}
+
+	if _, err := os.Stat(path); os.IsNotExist(err) {
+		return c.Status(fiber.StatusNotFound).JSON(fiber.Map{"error": "File not found"})
+	}
+
+	logEvent := log.CreateLog(h.logger, log.LogsField{Level: "Info", Method: c.Method(),
+		Url: c.OriginalURL(), Status: fiber.StatusOK})
+	logEvent.Msg("success")
+	return c.SendFile(path)
+}
+
+// UpdateArticle
+// @Tags article
+// @Summary      Update article
+// @Accept       json
+// @Produce      json
+// @Param data body entities.UpdateArticleRequest true "formula data"
+// @Success 200 {object} entities.Message
+// @Failure 400 {object} entities.ErrorResponse
+// @Failure 401 {object} entities.ErrorResponse
+// @Failure 500 {object} entities.ErrorResponse
+// @Router       /auth/article [put]
+// @Security ApiKeyAuth
+func (h *Handler) UpdateArticle(c *fiber.Ctx) error {
+	var article entities.UpdateArticleRequest
+	err := c.BodyParser(&article)
+	if err != nil {
+		logEvent := log.CreateLog(h.logger, log.LogsField{Level: "Error", Method: c.Method(),
+			Url: c.OriginalURL(), Status: fiber.StatusBadRequest})
+		logEvent.Err(err).Msg("invalid request body")
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{"error": "invalid request body"})
+	}
+
+	h.logger.Debug().Msg("call postgres.DBArticleUpdatePath")
+	err = postgres.DBArticleUpdate(h.db, &article)
+	if err != nil {
+		logEvent := log.CreateLog(h.logger, log.LogsField{Level: "Error", Method: c.Method(),
+			Url: c.OriginalURL(), Status: fiber.StatusInternalServerError})
+		logEvent.Msg(err.Error())
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{"error": err.Error()})
+	}
+
+	logEvent := log.CreateLog(h.logger, log.LogsField{Level: "Info", Method: c.Method(),
+		Url: c.OriginalURL(), Status: fiber.StatusOK})
+	logEvent.Msg("success")
+	return c.Status(fiber.StatusOK).JSON(fiber.Map{"message": "success"})
+}
+
+// UpdateArticleFile
+// @Tags article
+// @Summary      Update article
+// @Accept       json
+// @Produce      json
+// @Param        id    formData string true  "Article id"
+// @Param        file     formData file   true  "Upload file"
+// @Success 200 {object} entities.Message
+// @Failure 400 {object} entities.ErrorResponse
+// @Failure 401 {object} entities.ErrorResponse
+// @Failure 500 {object} entities.ErrorResponse
+// @Router       /auth/article/file [put]
+// @Security ApiKeyAuth
+func (h *Handler) UpdateArticleFile(c *fiber.Ctx) error {
+	userId, ok := c.Locals("id").(int)
+	if !ok {
+		return c.SendStatus(fiber.StatusForbidden)
+	}
+
+	articleId, err := strconv.Atoi(c.FormValue("id"))
+	if err != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"error": "Invalid article_id",
+		})
+	}
+
+	h.logger.Debug().Msg("call postgres.DBUserGetById")
+	user, err := postgres.DBUserGetById(h.db, int64(userId))
+	if err != nil {
+		logEvent := log.CreateLog(h.logger, log.LogsField{Level: "Error", Method: c.Method(),
+			Url: c.OriginalURL(), Status: fiber.StatusInternalServerError})
+		logEvent.Msg(err.Error())
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{"error": err.Error()})
+	}
+
+	userDirName := fmt.Sprintf("articles/%s", user.Surname+" "+user.Name+" "+user.ThirdName)
+
+	h.logger.Debug().Msg("call postgres.DBArticleGetPath")
+	path, err := postgres.DBArticleGetPath(h.db, articleId)
+	if err != nil {
+		logEvent := log.CreateLog(h.logger, log.LogsField{Level: "Error", Method: c.Method(),
+			Url: c.OriginalURL(), Status: fiber.StatusBadRequest})
+		logEvent.Msg(err.Error())
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{"error": err})
+	}
+
+	err = os.Remove(path)
+	if err != nil {
+		if os.IsNotExist(err) {
+			return c.Status(fiber.StatusNotFound).JSON(fiber.Map{"error": "File not found"})
+		}
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{"error": "Failed to delete file"})
+	}
+
+	form, err := c.MultipartForm()
+	if err != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{"error": err.Error()})
+	}
+	files := form.File["file"]
+	if len(files) == 0 {
+		logEvent := log.CreateLog(h.logger, log.LogsField{Level: "Error", Method: c.Method(),
+			Url: c.OriginalURL(), Status: fiber.StatusInternalServerError})
+		logEvent.Msg("empty file")
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{"error": "empty file"})
+	}
+
+	for _, file := range files {
+		fullPath := fmt.Sprintf("./%s/%s", userDirName, file.Filename)
+		if err = c.SaveFile(file, fullPath); err != nil {
+			logEvent := log.CreateLog(h.logger, log.LogsField{Level: "Error", Method: c.Method(),
+				Url: c.OriginalURL(), Status: fiber.StatusInternalServerError})
+			logEvent.Msg(err.Error())
+			return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{"error": err.Error()})
+		}
+
+		h.logger.Debug().Msg("call postgres.DBArticleUpdatePath")
+		err = postgres.DBArticleUpdatePath(h.db, fullPath, articleId)
+		if err != nil {
+			logEvent := log.CreateLog(h.logger, log.LogsField{Level: "Error", Method: c.Method(),
+				Url: c.OriginalURL(), Status: fiber.StatusInternalServerError})
+			logEvent.Msg(err.Error())
+			return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{"error": err.Error()})
+		}
+	}
+
+	logEvent := log.CreateLog(h.logger, log.LogsField{Level: "Info", Method: c.Method(),
+		Url: c.OriginalURL(), Status: fiber.StatusOK})
+	logEvent.Msg("success")
+	return c.Status(fiber.StatusOK).JSON(fiber.Map{"message": "success"})
+}
+
+// DeleteArticle
+// @Tags article
+// @Summary      Delete article
+// @Accept       json
+// @Produce      json
+// @Param id path string true "article id"
+// @Success 200 {object} entities.Message
+// @Failure 400 {object} entities.ErrorResponse
+// @Failure 401 {object} entities.ErrorResponse
+// @Failure 500 {object} entities.ErrorResponse
+// @Router       /auth/article/id/{id} [delete]
+// @Security ApiKeyAuth
+func (h *Handler) DeleteArticle(c *fiber.Ctx) error {
+	idStr := c.Params("id")
+	id, err := strconv.Atoi(idStr)
+	if err != nil {
+		logEvent := log.CreateLog(h.logger, log.LogsField{Level: "Error", Method: c.Method(),
+			Url: c.OriginalURL(), Status: fiber.StatusInternalServerError})
+		logEvent.Msg(err.Error())
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{"error": err.Error()})
+	}
+
+	path, err := postgres.DBArticleGetPath(h.db, id)
+	if err != nil {
+		logEvent := log.CreateLog(h.logger, log.LogsField{Level: "Error", Method: c.Method(),
+			Url: c.OriginalURL(), Status: fiber.StatusBadRequest})
+		logEvent.Msg(err.Error())
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{"error": err})
+	}
+
+	err = os.Remove(path)
+	if err != nil {
+		if os.IsNotExist(err) {
+			return c.Status(fiber.StatusNotFound).JSON(fiber.Map{"error": "File not found"})
+		}
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{"error": "Failed to delete file"})
+	}
+
+	h.logger.Debug().Msg("call postgres.DBArticleDelete")
+	err = postgres.DBArticleDelete(h.db, int64(id))
+	if err != nil {
+		logEvent := log.CreateLog(h.logger, log.LogsField{Level: "Error", Method: c.Method(),
+			Url: c.OriginalURL(), Status: fiber.StatusInternalServerError})
+		logEvent.Msg(err.Error())
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{"error": err.Error()})
+	}
+
+	logEvent := log.CreateLog(h.logger, log.LogsField{Level: "Info", Method: c.Method(),
+		Url: c.OriginalURL(), Status: fiber.StatusOK})
+	logEvent.Msg("success")
+	return c.Status(fiber.StatusOK).JSON(fiber.Map{"message": "success"})
 }
